--- a/.github/workflows/build-lede.yml
+++ b/.github/workflows/build-lede.yml
@@ -647,6 +647,25 @@ jobs:
           ln -sf /mnt/openwrt/staging_dir /workdir/openwrt/staging_dir
           df -hT
 
+      - name: Fix kernel config missing issue
+        env:
+          CC: "ccache gcc"
+          CXX: "ccache g++"
+        run: |
+           cd openwrt
+           # 从配置文件中获取 Linux 内核版本号
+           LINUX_VERSION=$(grep '^CONFIG_LINUX_' .config | sed -r 's/^CONFIG_LINUX_([0-9\.]+)=y/\1/')
+           KERNEL_CONFIG_DIR="build_dir/target-x86_64_musl/linux-x86_64/linux-${LINUX_VERSION}"
+           # 确保 kernel 配置文件存在
+           if [ ! -f "${KERNEL_CONFIG_DIR}/.config" ]; then
+           echo "Kernel .config 文件缺失，尝试重新生成"
+           make target/linux/clean
+           make package/linux/clean
+           make -j$(($(nproc) + 1)) target/linux/compile CC="$CC" CXX="$CXX"
+           make -j$(($(nproc) + 1)) package/linux/compile CC="$CC" CXX="$CXX"
+           ccache -s
+           fi
+
       - name: Final compile with CCache
         id: final-compile
         env:
