修复无法运行的问题

--- a/lede/.config
+++ b/lede/.config
@@ -6673,7 +6673,6 @@ CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_luci-app-autoupdate is not set
 # CONFIG_PACKAGE_luci-app-babeld is not set
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
-# CONFIG_PACKAGE_luci-app-bandix is not set
 # CONFIG_PACKAGE_luci-app-banip is not set
 CONFIG_PACKAGE_luci-app-banmac-ipt=y
 # CONFIG_PACKAGE_luci-app-banmac-nft is not set
@@ -6858,6 +6857,7 @@ CONFIG_PACKAGE_luci-app-istorex=y
 # CONFIG_PACKAGE_luci-app-jackett is not set
 # CONFIG_PACKAGE_luci-app-jd-dailybonus is not set
 CONFIG_PACKAGE_luci-app-jellyfin=y
+# CONFIG_PACKAGE_luci-app-kai is not set
 CONFIG_PACKAGE_luci-app-kcptun=y
 # CONFIG_PACKAGE_luci-app-keepalived is not set
 # CONFIG_PACKAGE_luci-app-kodexplorer is not set
@@ -6886,7 +6886,7 @@ CONFIG_PACKAGE_luci-app-ksmbd=y
 # CONFIG_PACKAGE_luci-app-minidlna is not set
 # CONFIG_PACKAGE_luci-app-minieap is not set
 # CONFIG_PACKAGE_luci-app-mjpg-streamer is not set
-CONFIG_PACKAGE_luci-app-mlvpn=y
+# CONFIG_PACKAGE_luci-app-mlvpn is not set
 # CONFIG_PACKAGE_luci-app-mmconfig is not set
 # CONFIG_PACKAGE_luci-app-mmdvm is not set
 # CONFIG_PACKAGE_luci-app-mnh is not set
@@ -7081,7 +7081,7 @@ CONFIG_PACKAGE_luci-app-shadowsocks=y
 CONFIG_PACKAGE_luci-app-shadowsocks-libev=y
 CONFIG_PACKAGE_luci-app-shadowsocks-rust=y
 CONFIG_PACKAGE_luci-app-shadowsocksr=y
-CONFIG_PACKAGE_luci-app-shadowvpn=y
+# CONFIG_PACKAGE_luci-app-shadowvpn is not set
 # CONFIG_PACKAGE_luci-app-shairplay is not set
 # CONFIG_PACKAGE_luci-app-shanligong is not set
 # CONFIG_PACKAGE_luci-app-shortcutmenu is not set
@@ -7089,7 +7089,7 @@ CONFIG_PACKAGE_luci-app-shadowvpn=y
 # CONFIG_PACKAGE_luci-app-siitwizard is not set
 CONFIG_PACKAGE_luci-app-smartdns=y
 # CONFIG_PACKAGE_luci-app-smartinfo is not set
-CONFIG_PACKAGE_luci-app-smartvpn=y
+# CONFIG_PACKAGE_luci-app-smartvpn is not set
 # CONFIG_PACKAGE_luci-app-smbuser is not set
 # CONFIG_PACKAGE_luci-app-sms-tool is not set
 # CONFIG_PACKAGE_luci-app-sms-tool-js is not set
@@ -7672,9 +7672,6 @@ CONFIG_PACKAGE_luci-i18n-kcptun-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-ksmbd-yua is not set
 CONFIG_PACKAGE_luci-i18n-ksmbd-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-ksmbd-zh-tw is not set
-# CONFIG_PACKAGE_luci-i18n-mlvpn-fr is not set
-# CONFIG_PACKAGE_luci-i18n-mlvpn-ru is not set
-CONFIG_PACKAGE_luci-i18n-mlvpn-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mosdns-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-mosdns2-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-mwan3-ar is not set
@@ -8038,8 +8035,6 @@ CONFIG_PACKAGE_luci-i18n-shadowsocks-rust-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-smartdns-vi is not set
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-smartdns-zh-tw is not set
-CONFIG_PACKAGE_luci-i18n-smartvpn-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-smartvpn-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-ss-redir-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-sshtunnel-ar is not set
 # CONFIG_PACKAGE_luci-i18n-sshtunnel-bg is not set
@@ -8423,7 +8418,6 @@ CONFIG_PACKAGE_yt-dlp=y
 # CONFIG_PACKAGE_mktorrent is not set
 # CONFIG_PACKAGE_opentracker is not set
 # CONFIG_PACKAGE_opentracker6 is not set
-# CONFIG_PACKAGE_qBittorrent-static is not set
 CONFIG_PACKAGE_qbittorrent=y
 # CONFIG_PACKAGE_rtorrent is not set
 CONFIG_PACKAGE_rtorrent-rpc=y
@@ -9087,20 +9081,14 @@ CONFIG_PACKAGE_tmate=y
 # CONFIG_PACKAGE_modeminfo-qmi is not set
 # CONFIG_PACKAGE_modeminfo-serial-dell is not set
 # CONFIG_PACKAGE_modeminfo-serial-fibocom is not set
-# CONFIG_PACKAGE_modeminfo-serial-gosun is not set
 # CONFIG_PACKAGE_modeminfo-serial-huawei is not set
 # CONFIG_PACKAGE_modeminfo-serial-meig is not set
-# CONFIG_PACKAGE_modeminfo-serial-mikrotik is not set
 # CONFIG_PACKAGE_modeminfo-serial-quectel is not set
 # CONFIG_PACKAGE_modeminfo-serial-sierra is not set
 # CONFIG_PACKAGE_modeminfo-serial-simcom is not set
-# CONFIG_PACKAGE_modeminfo-serial-styx is not set
 # CONFIG_PACKAGE_modeminfo-serial-telit is not set
 # CONFIG_PACKAGE_modeminfo-serial-thales is not set
-# CONFIG_PACKAGE_modeminfo-serial-tw is not set
 # CONFIG_PACKAGE_modeminfo-serial-xmm is not set
-# CONFIG_PACKAGE_modeminfo-serial-yuge is not set
-# CONFIG_PACKAGE_modeminfo-serial-zte is not set
 # CONFIG_PACKAGE_modeminfo-telegram is not set
 # CONFIG_PACKAGE_pcapsipdump is not set
 # CONFIG_PACKAGE_rtpengine is not set
@@ -9148,7 +9136,7 @@ CONFIG_PACKAGE_tmate=y
 # CONFIG_PACKAGE_glorytun-udp is not set
 # CONFIG_PACKAGE_headscale is not set
 # CONFIG_PACKAGE_libreswan is not set
-CONFIG_PACKAGE_mlvpn=y
+# CONFIG_PACKAGE_mlvpn is not set
 # CONFIG_PACKAGE_n2n is not set
 # CONFIG_PACKAGE_n2n-edge is not set
 # CONFIG_PACKAGE_n2n-supernode is not set
@@ -9591,7 +9579,7 @@ CONFIG_PACKAGE_6to4=y
 # CONFIG_PACKAGE_AdGuardHome is not set
 CONFIG_PACKAGE_ChinaDNS=y
 # CONFIG_PACKAGE_HomeRedirect is not set
-CONFIG_PACKAGE_ShadowVPN=y
+# CONFIG_PACKAGE_ShadowVPN is not set
 # CONFIG_PACKAGE_Toolkit is not set
 # CONFIG_PACKAGE_UDPspeeder is not set
 # CONFIG_PACKAGE_accel-ppp is not set
@@ -9616,7 +9604,6 @@ CONFIG_PACKAGE_adbyby=y
 # CONFIG_PACKAGE_atlas-sw-probe is not set
 # CONFIG_PACKAGE_atlas-sw-probe-rpc is not set
 CONFIG_PACKAGE_baidupcs-web=y
-# CONFIG_PACKAGE_bandix is not set
 # CONFIG_PACKAGE_banip is not set
 CONFIG_PACKAGE_batctl-default=y
 # CONFIG_PACKAGE_batctl-full is not set
@@ -9803,6 +9790,8 @@ CONFIG_PACKAGE_nlbwmon=y
 # CONFIG_NPS_COMPRESS_UPX is not set
 # CONFIG_PACKAGE_nqptp is not set
 # CONFIG_PACKAGE_nut is not set
+# CONFIG_PACKAGE_oping is not set
+# CONFIG_PACKAGE_oscam is not set
 CONFIG_PACKAGE_obfs4proxy=y
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
@@ -9823,8 +9812,6 @@ CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 # CONFIG_PACKAGE_oor is not set
 # CONFIG_PACKAGE_open-iscsi is not set
 # CONFIG_PACKAGE_openlist is not set
-# CONFIG_PACKAGE_oping is not set
-# CONFIG_PACKAGE_oscam is not set
 # CONFIG_PACKAGE_ostiary is not set
 # CONFIG_PACKAGE_pagekitec is not set
 # CONFIG_PACKAGE_pcapplusplus is not set
@@ -10061,6 +10048,8 @@ CONFIG_PACKAGE_lame-lib=y
 #
 # CONFIG_PACKAGE_aihelper is not set
 # CONFIG_PACKAGE_ffmpeg-static is not set
+# CONFIG_PACKAGE_kai is not set
+# CONFIG_PACKAGE_kai_session is not set
 # CONFIG_PACKAGE_opencode is not set
 # end of System
 
@@ -10128,6 +10117,7 @@ CONFIG_PACKAGE_xz=y
 # CONFIG_PACKAGE_xzgrep is not set
 # CONFIG_PACKAGE_xzless is not set
 # CONFIG_PACKAGE_xzmore is not set
+# CONFIG_PACKAGE_zip is not set
 # CONFIG_PACKAGE_zipcmp is not set
 # CONFIG_PACKAGE_zipmerge is not set
 # CONFIG_PACKAGE_ziptool is not set
