--- a/Immortalwrt/.config
+++ b/Immortalwrt/.config
@@ -7030,7 +7030,7 @@ CONFIG_PACKAGE_luci-app-ksmbd=y
 # CONFIG_PACKAGE_luci-app-minidlna is not set
 # CONFIG_PACKAGE_luci-app-minieap is not set
 # CONFIG_PACKAGE_luci-app-mjpg-streamer is not set
-CONFIG_PACKAGE_luci-app-mlvpn=y
+# CONFIG_PACKAGE_luci-app-mlvpn is not set
 # CONFIG_PACKAGE_luci-app-mmconfig is not set
 # CONFIG_PACKAGE_luci-app-mmdvm is not set
 # CONFIG_PACKAGE_luci-app-mnh is not set
@@ -7226,7 +7226,7 @@ CONFIG_PACKAGE_luci-app-shadowsocks=y
 CONFIG_PACKAGE_luci-app-shadowsocks-libev=y
 CONFIG_PACKAGE_luci-app-shadowsocks-rust=y
 CONFIG_PACKAGE_luci-app-shadowsocksr=y
-CONFIG_PACKAGE_luci-app-shadowvpn=y
+# CONFIG_PACKAGE_luci-app-shadowvpn is not set
 # CONFIG_PACKAGE_luci-app-shairplay is not set
 # CONFIG_PACKAGE_luci-app-shanligong is not set
 # CONFIG_PACKAGE_luci-app-shortcutmenu is not set
@@ -7234,7 +7234,7 @@ CONFIG_PACKAGE_luci-app-shadowvpn=y
 # CONFIG_PACKAGE_luci-app-siitwizard is not set
 CONFIG_PACKAGE_luci-app-smartdns=y
 # CONFIG_PACKAGE_luci-app-smartinfo is not set
-CONFIG_PACKAGE_luci-app-smartvpn=y
+# CONFIG_PACKAGE_luci-app-smartvpn is not set
 # CONFIG_PACKAGE_luci-app-smbuser is not set
 # CONFIG_PACKAGE_luci-app-sms-tool is not set
 # CONFIG_PACKAGE_luci-app-sms-tool-js is not set
@@ -7782,7 +7782,7 @@ CONFIG_PACKAGE_luci-i18n-ksmbd-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-ksmbd-zh-tw is not set
 # CONFIG_PACKAGE_luci-i18n-mlvpn-fr is not set
 # CONFIG_PACKAGE_luci-i18n-mlvpn-ru is not set
-CONFIG_PACKAGE_luci-i18n-mlvpn-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-mlvpn-zh-cn is not set
 CONFIG_PACKAGE_luci-i18n-mosdns-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-mosdns2-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-mwan3-ar is not set
@@ -8153,7 +8153,7 @@ CONFIG_PACKAGE_luci-i18n-shadowsocks-rust-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-smartdns-vi is not set
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-smartdns-zh-tw is not set
-CONFIG_PACKAGE_luci-i18n-smartvpn-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-smartvpn-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-smartvpn-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-ss-redir-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-sshtunnel-ar is not set
@@ -9326,7 +9326,7 @@ CONFIG_PACKAGE_modeminfo=y
 # CONFIG_PACKAGE_headscale is not set
 # CONFIG_PACKAGE_libreswan is not set
 # CONFIG_PACKAGE_libreswan-nftables is not set
-CONFIG_PACKAGE_mlvpn=y
+# CONFIG_PACKAGE_mlvpn is not set
 # CONFIG_PACKAGE_n2n is not set
 # CONFIG_PACKAGE_n2n-edge is not set
 # CONFIG_PACKAGE_n2n-supernode is not set
@@ -9792,7 +9792,7 @@ CONFIG_PACKAGE_6in4=y
 # CONFIG_PACKAGE_AdGuardHome is not set
 CONFIG_PACKAGE_ChinaDNS=y
 # CONFIG_PACKAGE_HomeRedirect is not set
-CONFIG_PACKAGE_ShadowVPN=y
+# CONFIG_PACKAGE_ShadowVPN is not set
 # CONFIG_PACKAGE_Toolkit is not set
 # CONFIG_PACKAGE_UDPspeeder is not set
 # CONFIG_PACKAGE_aardvark-dns is not set
