--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -96,8 +96,11 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          sudo swapoff /mnt/swapfile
-          sudo rm -rf /mnt/swapfile
+          # 检查swapfile是否存在，避免在不存在的文件上执行操作
+          if [ -f /mnt/swapfile ]; then
+            sudo swapoff /mnt/swapfile
+            sudo rm -rf /mnt/swapfile
+          fi
           sudo chmod 777 /mnt
           sudo mkdir -p -m 777 openwrt/build_dir /mnt/openwrt/dl /mnt/openwrt/staging_dir /mnt/openwrt/build_dir /mnt/openwrt/tmp /mnt/ccache
           ln -sf /mnt/openwrt/dl openwrt/dl
@@ -277,8 +280,11 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          sudo swapoff /mnt/swapfile
-          sudo rm -rf /mnt/swapfile
+          # 检查swapfile是否存在，避免在不存在的文件上执行操作
+          if [ -f /mnt/swapfile ]; then
+            sudo swapoff /mnt/swapfile
+            sudo rm -rf /mnt/swapfile
+          fi
           sudo chmod 777 /mnt
           sudo mkdir -p -m 777 openwrt/build_dir /mnt/openwrt/dl /mnt/openwrt/staging_dir /mnt/openwrt/build_dir /mnt/openwrt/tmp /mnt/ccache
           ln -sf /mnt/openwrt/dl openwrt/dl
@@ -448,8 +454,11 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          sudo swapoff /mnt/swapfile
-          sudo rm -rf /mnt/swapfile
+          # 检查swapfile是否存在，避免在不存在的文件上执行操作
+          if [ -f /mnt/swapfile ]; then
+            sudo swapoff /mnt/swapfile
+            sudo rm -rf /mnt/swapfile
+          fi
           sudo chmod 777 /mnt
           sudo mkdir -p -m 777 openwrt/build_dir /mnt/openwrt/dl /mnt/openwrt/staging_dir /mnt/openwrt/build_dir /mnt/openwrt/tmp /mnt/ccache
           ln -sf /mnt/openwrt/dl openwrt/dl
@@ -622,10 +631,13 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          sudo swapoff /mnt/swapfile
-          sudo rm -rf /mnt/swapfile
+          # 检查swapfile是否存在，避免在不存在的文件上执行操作
+          if [ -f /mnt/swapfile ]; then
+            sudo swapoff /mnt/swapfile
+            sudo rm -rf /mnt/swapfile
+          fi
           sudo chmod 777 /mnt
-          sudo mkdir -p -m 777 openwrt/build_dir /mnt/openwrt/dl /mnt/openwrt/staging_dir /mnt/openwrt/build_dir /mnt/openwrt/tmp
+          sudo mkdir -p -m 777 openwrt/build_dir /mnt/openwrt/dl /mnt/openwrt/staging_dir /mnt/openwrt/build_dir /mnt/openwrt/tmp /mnt/ccache
           ln -sf /mnt/openwrt/dl openwrt/dl
           ln -sf /mnt/openwrt/tmp openwrt/tmp
           ln -sf /mnt/openwrt/staging_dir openwrt/staging_dir
