--- a/.github/workflows/build-lede.yml
+++ b/.github/workflows/build-lede.yml
@@ -90,8 +90,11 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          sudo swapoff /mnt/swapfile
-          sudo rm -rf /mnt/swapfile
+          # 检查swapfile是否存在，避免在不存在的文件上执行操作
+          if [ -f /mnt/swapfile ]; then
+            sudo swapoff /mnt/swapfile
+            sudo rm -rf /mnt/swapfile
+          fi
           sudo chmod 777 /mnt
           sudo mkdir -p -m 777 openwrt/build_dir /mnt/openwrt/dl /mnt/openwrt/staging_dir /mnt/openwrt/build_dir /mnt/openwrt/tmp /mnt/ccache
           ln -sf /mnt/openwrt/dl openwrt/dl
@@ -271,8 +274,11 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          sudo swapoff /mnt/swapfile
-          sudo rm -rf /mnt/swapfile
+          # 检查swapfile是否存在，避免在不存在的文件上执行操作
+          if [ -f /mnt/swapfile ]; then
+            sudo swapoff /mnt/swapfile
+            sudo rm -rf /mnt/swapfile
+          fi
           sudo chmod 777 /mnt
           sudo mkdir -p -m 777 openwrt/build_dir /mnt/openwrt/dl /mnt/openwrt/staging_dir /mnt/openwrt/build_dir /mnt/openwrt/tmp /mnt/ccache
           ln -sf /mnt/openwrt/dl openwrt/dl
@@ -442,8 +448,11 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          sudo swapoff /mnt/swapfile
-          sudo rm -rf /mnt/swapfile
+          # 检查swapfile是否存在，避免在不存在的文件上执行操作
+          if [ -f /mnt/swapfile ]; then
+            sudo swapoff /mnt/swapfile
+            sudo rm -rf /mnt/swapfile
+          fi
           sudo chmod 777 /mnt
           sudo mkdir -p -m 777 openwrt/build_dir /mnt/openwrt/dl /mnt/openwrt/staging_dir /mnt/openwrt/build_dir /mnt/openwrt/tmp /mnt/ccache
           ln -sf /mnt/openwrt/dl openwrt/dl
@@ -616,8 +625,11 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          sudo swapoff /mnt/swapfile
-          sudo rm -rf /mnt/swapfile
+          # 检查swapfile是否存在，避免在不存在的文件上执行操作
+          if [ -f /mnt/swapfile ]; then
+            sudo swapoff /mnt/swapfile
+            sudo rm -rf /mnt/swapfile
+          fi
           sudo chmod 777 /mnt
           sudo mkdir -p -m 777 openwrt/build_dir /mnt/openwrt/dl /mnt/openwrt/staging_dir /mnt/openwrt/build_dir /mnt/openwrt/tmp /mnt/ccache
           ln -sf /mnt/openwrt/dl openwrt/dl
