--- a/lede/.config
+++ b/lede/.config
@@ -8898,7 +8898,7 @@ CONFIG_PACKAGE_dnscrypt-proxy=y
 # end of Configuration
 
 CONFIG_PACKAGE_dnscrypt-proxy-resolvers=y
-# CONFIG_PACKAGE_dnscrypt-proxy2 is not set
+CONFIG_PACKAGE_dnscrypt-proxy2=m
 # CONFIG_PACKAGE_dnsdist is not set
 # CONFIG_PACKAGE_dnslookup is not set
 CONFIG_PACKAGE_dnsproxy=y
